# heropy

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  poetry.toml  pyproject.toml
heropy/: admin.py  apps.py  book_manager.py  forms.py  hero.py  models.py  urls.py  views.py
heropy/migrations/: 0001_initial.py
heropy/static/css/: styles.css
heropy/static/scripts/: hero_api.js  hero_board.js  hero_utils.js
heropy/templates/: base.html  index.html
heropy/templates/books/: book.html  book_config.html  book_list.html
heropy/templates/chapters/: chapter.html  chapter_battle.html  chapter_player_board.html
heropy/templates/load/: load.html
heropy/templates/player/: player_controls_board.html  player_header_board.html  player_stat_board.html
heropy/templates/settings/: settings.html
heropy/templates/start/: start.html
heropy/tests/: book_manager_test.py
heropy_django/: asgi.py  settings.py  urls.py  wsgi.py
