[tool.poetry]
name = "heropy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fitz = "^0.0.1.dev2"
pymupdf = "^1.21.0"
django = "^4.1.3"
lxml = { file = "lxml-4.9.0-cp311-cp311-win_amd64.whl" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
