[tool.poetry]
name = "heropy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fitz = "^0.0.1.dev2"
pymupdf = "^1.21.0"
django = "^4.1.3"
psycopg = "^3.1.12"
django-storage-url = "^0.10.1"
whitenoise = "^6.6.0"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-django = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
